--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/style.css">
+
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -55,7 +60,112 @@
         </div>
     </div>
 
+
     <!-- вторая часть -->
+
+    <main>
+        <div class="container mission">
+            <div class="mission__title">
+                <h1>Main Focus/Mission Statement</h1>
+            </div>
+
+            <div class="mission__statement">
+                <div class="row">
+                    <div class="col-2">
+                        <svg width="66" height="143" viewBox="0 0 66 143" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path d="M65.6406 143H32.6328V37.9219L0.210938 47.3945V22.3945L62.6133 0.8125H65.6406V143Z"
+                                fill="#F2F2F2" />
+                        </svg>
+                    </div>
+                    <div class="col-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis
+                            placerat.</p>
+                    </div>
+                    <div class="col-2">
+                        <svg width="103" height="145" viewBox="0 0 103 145" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M102.91 145H3.69141V123.516L49.3945 75.4688C60.6576 62.6432 66.2891 52.4544 66.2891 44.9023C66.2891 38.7826 64.9544 34.1276 62.2852 30.9375C59.6159 27.7474 55.7422 26.1523 50.6641 26.1523C45.651 26.1523 41.582 28.3008 38.457 32.5977C35.332 36.8294 33.7695 42.1354 33.7695 48.5156H0.761719C0.761719 39.7917 2.94271 31.7513 7.30469 24.3945C11.6667 16.9727 17.7214 11.1784 25.4688 7.01172C33.2161 2.84505 41.875 0.761719 51.4453 0.761719C66.8099 0.761719 78.6263 4.3099 86.8945 11.4062C95.2279 18.5026 99.3945 28.6914 99.3945 41.9727C99.3945 47.5716 98.3529 53.0404 96.2695 58.3789C94.1862 63.6523 90.931 69.2188 86.5039 75.0781C82.1419 80.8724 75.0781 88.6523 65.3125 98.418L46.9531 119.609H102.91V145Z"
+                                fill="#F2F2F2" />
+                        </svg>
+
+                    </div>
+                    <div class="col-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis
+                            placerat, magna mauris porttitor tortor, a auctor est felis ut nisl.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container project">
+            <div class="project__title">
+                <h1>Our Projects</h1>
+            </div>
+
+            <div class="project__image">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="assets\images\Rectangle 12.png" class="image__item1" alt="stadium">
+                    </div>
+                    <div class="col-6">
+                        <img src="assets\images\image 15.png" class="image__item2" alt="semicircle">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <img src="assets\images\image 16.png" class="image__item3" alt="field">
+                    </div>
+                    <div class="col-5">
+                        <img src="assets\images\image 17.png" class="image__item4" alt="building">
+                    </div>
+                    <div class="col-4">
+                        <img src="assets\images\image 18.png" class="image__item5" alt="art object">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container contact">
+            <div class="contact_title">
+                <h1>Contact Us</h1>
+            </div>
+            <form>
+                <div class="form-group">
+                    <input class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" id="exampleFormControlInput2" placeholder="Phone Number*">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" id="exampleFormControlInput3" placeholder="E-mail*">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" id="exampleFormControlInput4" placeholder="Interested In">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" id="exampleFormControlInput5" rows="6" placeholder="Message*">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"
+                        placeholder="Message*"></textarea>
+                </div>
+            </form>
+
+            <div class="picture">
+                <img src="assets\images\image 12.png" alt="men_call">
+            </div>
+        </div>
+    </main>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
