--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -15,17 +15,17 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container lorum">
         <aside>
             <h1>PROJECT</h1>
             <h2>Lorum</h2>
         </aside>
-        <main>
+        <div class="image">
             <img src="assets/images/Rectangle6.png" alt="arch">
-        </main>
-
+        </div>
     </div>
-    <div class="container2">
+
+    <div class="container about">
         <div class="pic1">
             <img src="assets/images/Rectangle8.png" alt="arch">
         </div>
@@ -43,8 +43,8 @@
             <img src="assets/images/Rectangle10.png" alt="arch">
         </div>
     </div>
-    <div class="container3">
-        <div class="mission">
+    <div class="container mission1">
+        <div class="mission1__title">
             <h1>Main focus/Mission Statement</h1>
         </div>
         <div class="text1">
