--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container lorum">
         <aside>
-            <h1>PROJECT</h1>
+            <h1>PROJECT ghgkhl</h1>
             <h2>Lorum</h2>
         </aside>
         <div class="image">
