--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -16,10 +16,10 @@
 
 <body>
     <div class="container lorum">
-        <aside>
-            <h1>PROJECT ghgkhl</h1>
+        <div class="name_project">
+            <h1>PROJECT</h1>
             <h2>Lorum</h2>
-        </aside>
+        </div>
         <div class="image">
             <img src="assets/images/Rectangle6.png" alt="arch">
         </div>
