добавила текст и затемнение картинки

--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -89,9 +89,14 @@
             <div class="project__title">
                 <h1>Our Projects</h1>
             </div>
-
             <div class="project__image1">
-                <img src="assets\images\Rectangle 12.png" class="image__item1" alt="stadium">
+                <div class="image__item1">
+                    <img src="assets\images\Rectangle 12.png" alt="stadium">
+                    <div class="image1__text">
+                        <h1>Sample Project</h1>
+                        <p>View More</p>
+                    </div>
+                </div>
                 <img src="assets\images\image 15.png" class="image__item2" alt="semicircle">
             </div>
             <div class="project__image2">
