--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -56,13 +56,13 @@
             <div class="mission__statement">
                 <div class="row mt-5">
                     <div class="col">
-                        <svg width="8vw" height="16vh" viewBox="0 0 66 143" fill="none"
+                        <svg width="10vw" height="20vh" viewBox="0 0 66 143" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path d="M65.6406 143H32.6328V37.9219L0.210938 47.3945V22.3945L62.6133 0.8125H65.6406V143Z"
                                 fill="#F2F2F2" />
                         </svg>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 textstyle">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis
                             placerat.</p>
                     </div>
@@ -70,14 +70,14 @@
 
                     </div>
                     <div class="col">
-                        <svg width="8vw" height="16vh" viewBox="0 0 103 145" fill="none"
+                        <svg width="10vw" height="20vh" viewBox="0 0 103 145" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M102.91 145H3.69141V123.516L49.3945 75.4688C60.6576 62.6432 66.2891 52.4544 66.2891 44.9023C66.2891 38.7826 64.9544 34.1276 62.2852 30.9375C59.6159 27.7474 55.7422 26.1523 50.6641 26.1523C45.651 26.1523 41.582 28.3008 38.457 32.5977C35.332 36.8294 33.7695 42.1354 33.7695 48.5156H0.761719C0.761719 39.7917 2.94271 31.7513 7.30469 24.3945C11.6667 16.9727 17.7214 11.1784 25.4688 7.01172C33.2161 2.84505 41.875 0.761719 51.4453 0.761719C66.8099 0.761719 78.6263 4.3099 86.8945 11.4062C95.2279 18.5026 99.3945 28.6914 99.3945 41.9727C99.3945 47.5716 98.3529 53.0404 96.2695 58.3789C94.1862 63.6523 90.931 69.2188 86.5039 75.0781C82.1419 80.8724 75.0781 88.6523 65.3125 98.418L46.9531 119.609H102.91V145Z"
                                 fill="#F2F2F2" />
                         </svg>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4 textstyle">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur, lectus et facilisis
                             placerat, magna mauris porttitor tortor, a auctor est felis ut nisl.</p>
                     </div>
