--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -18,7 +18,7 @@
     <div class="container lorum">
         <div class="name_project">
             <h1>PROJECT</h1>
-            <h2>Lorum</h2>
+            <p>Lorum</p>
         </div>
         <div class="pic">
             <img src="assets/images/Rectangle6.png" alt="arch">
