--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -16,20 +16,20 @@
 
 <body>
     <div class="container lorum">
-        <div class="name_project">
+        <div class="lorum__name project">
             <h1>PROJECT</h1>
             <p>Lorum</p>
         </div>
-        <div class="pic">
+        <div class="lorum__pic">
             <img src="assets/images/Rectangle6.png" alt="arch">
         </div>
     </div>
 
     <div class="container about">
-        <div class="pic1">
+        <div class="about__pic1">
             <img src="assets/images/Rectangle8.png" alt="arch">
         </div>
-        <div class="pic2">
+        <div class="about__pic2">
             <img src="assets/images/Rectangle9.png" alt="arch">
         </div>
         <div class="text">
