--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -34,7 +34,8 @@
         </div>
         <div class="text">
             <h2>About</h2>
-            <p>Lorem Ipsum is simply dummy text of the printting and typesetting industry. Lorem Ipsum has been the
+            <p class=about__text>
+                Lorem Ipsum is simply dummy text of the printting and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
                 into electronic typesetting, remaining essentially unchanged.</p>
