--- a/week9/mainpart.html
+++ b/week9/mainpart.html
@@ -16,9 +16,9 @@
 
 <body>
     <div class="container lorum">
-        <div class="lorum__name project">
+        <div class="lorum__name_project">
             <h1>PROJECT</h1>
-            <p>Lorum</p>
+            <p class="lorum__text">Lorum</p>
         </div>
         <div class="lorum__pic">
             <img src="assets/images/Rectangle6.png" alt="arch">
@@ -40,7 +40,7 @@
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
                 into electronic typesetting, remaining essentially unchanged.</p>
         </div>
-        <div class="pic3">
+        <div class="about__pic3">
             <img src="assets/images/Rectangle10.png" alt="arch">
         </div>
     </div>
